syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message CalculatorMessage {
    CalculatorRequest calculatorRequest = 1;
}

message CalculatorRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message CalculatorResponse {
    string result = 1;
}

service CalculatorService  {
    rpc calculator(CalculatorMessage) returns (CalculatorResponse) {};
}

